# tallerjuangubio

./: Dockerfile  README.md  app.py  ejercicio_basico.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml  python-publish.yml
src/tallerjuangubio/: __init__.py
src/tallerjuangubio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
