[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tallerjuangubio"
version = "0.1.0"
description = "A simple Flask app by JuanGubio"
authors = [
    {name = "JuanGubio", email = "juan@example.com"},
]
dependencies = [
    "flask",
]

[project.scripts]
tallerjuangubio = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]